--- a/src/prompt.scss
+++ b/src/prompt.scss
@@ -1,3 +1,5 @@
+@import '../node_modules/bourbon/app/assets/stylesheets/bourbon';
+
 .prompt_overlay {
 
     position: fixed; top: 0; bottom: 0; left: 0; right: 0;
@@ -8,7 +10,7 @@
 
 .prompt_box {
 
-    display: block; position: absolute; left: 50%; top: 50%; transform: translateX(-50%) translateY(-50%);
+    display: block; position: absolute; left: 50%; margin-left: -14em; top: 20%;
     width: 20em;
     border: 1px solid #e9e9e9; background-color: #fff;
     text-align: center;
@@ -17,7 +19,7 @@
 
         font-size: 16px; font-family: 'Open Sans', Arial, sans-serif; font-weight: 400;
         text-align: center;
-        padding: 30px 30px 20px;
+        padding: 3em 3em 2em; margin: 0;
         color: #808080;
 
     }
@@ -35,8 +37,6 @@
             text-transform: uppercase;  text-align: center;
             color: #a6a6a6; text-decoration: none;
 
-            &:first-child { float: left; }
-
         }
 
         .accept {
@@ -48,9 +48,12 @@
 
     > input {
 
+      @include appearance(none);
+
       font-family: 'Open Sans', Arial, sans-serif; font-size: 16px;
-      height: 28px; margin-bottom: 40px;
-      color: #808080;
+      display: block; box-sizing: border-box; width: 80%;
+      padding: 10px 5px;  margin: 0 auto 2.5em;
+      color: #808080; border: 1px solid #e9e9e9; background-color: transparent;
 
     }
 
