--- a/src/prompt.scss
+++ b/src/prompt.scss
@@ -1,22 +1,29 @@
 @import '../node_modules/bourbon/app/assets/stylesheets/bourbon';
 
+@include keyframes(prompt_fade_in) {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
 .prompt_overlay {
 
+    @include animation(prompt_fade_in 0.5s);
+
     position: fixed; top: 0; bottom: 0; left: 0; right: 0; z-index: 1000;
-    background-color: rgba(255, 255, 255, 0.6);
-    font-family: Arial, sans-serif;
+    background-color: rgba(#000, 0.5);
 
 }
 
 .prompt_box {
 
-    position: absolute; width: 20em; left: 50%; top: 40%; margin: -5em 0 0 -10em;
-    border: 1px solid #e9e9e9; background-color: #fff; text-align: center;
+    position: absolute; width: 30em; left: 50%; top: 40%; margin: -4em 0 0 -15em;
+    font-family: Arial, sans-serif;
+    background-color: #fff; text-align: center; box-shadow: 0 0.2em 0.5em rgba(#000, 0.2); border-radius: 0.3em;
 
     > .message {
 
         font-size: 1.6em; padding: em(30,16) em(30,16) em(20,16); margin: 0;
-        text-align: center; color: #808080; box-shadow: 0 0.2em 0.5em rgba(#000, 0.05);
+        text-align: center; color: #4B4B4B;
 
     }
 
@@ -30,11 +37,15 @@
             font-size: 1.4em; font-weight: bold; float: left; width: 50%; padding: em(15,14) 0;
             color: #a6a6a6; text-decoration: none; text-transform: uppercase;  text-align: center;
 
+            &:hover { color: darken(#a6a6a6,10%); }
+
         }
 
         > .accept {
 
-            color: #808080; border-left: 1px solid #e9e9e9;
+            color: #5D5B5B; border-left: 1px solid #e9e9e9; margin-left: -1px;
+
+            &:hover { color: darken(#5D5B5B,10%); }
 
         }
     }
@@ -44,10 +55,9 @@
         @include appearance(none);
 
         font-size: 1.6em; font-family: Arial, sans-serif;
-        display: block; box-sizing: border-box; width: 80%; margin: 0 auto em(25,16); padding: em(10,16) em(5,16);
-        color: #808080; border: 1px solid #e9e9e9; background: transparent;
+        display: block; box-sizing: border-box; width: 85%; margin: 0 auto em(25,16); padding: em(8,16) em(10,16);
+        color: #808080; border: 1px solid #d4d4d4; background: transparent;
 
     }
 
 }
-
